crates/compiler/tests/parse_errors/let_eq.elm
module Main exposing (..)

x =
    let a 1 in a
